# supertux-trainer

./: CMakeLists.txt  README.md  test_simple  test_simple.cpp
include/hooks/: MinHookWrapper.h
include/memory/: Pattern.h
include/scanner/: PatternScanner.h
include/ui/: ConsoleUI.h
src/: main.cpp
src/hooks/: MinHookWrapper.cpp
src/memory/: MockMemoryProvider.cpp  Pattern.cpp  WindowsMemoryProvider.cpp
src/scanner/: PatternScanner.cpp
src/ui/: ConsoleUI.cpp
